kubernetes/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nostr-auth
  namespace: nostr-auth
  labels:
    app.kubernetes.io/name: nostr-auth
    app.kubernetes.io/part-of: nostr-auth
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-cloudflare-dns01
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "nostr-auth-affinity"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nostr-auth.brunobernard.dev
      secretName: nostr-auth-tls
  rules:
    - host: nostr-auth.brunobernard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nostr-auth
                port:
                  number: 80
